# hmi_2015

./: CMakeLists.txt  README.md  package.xml
cob4-2/: arm_left_joint_configurations.yaml  arm_right_joint_configurations.yaml
hmi_bringup/: CMakeLists.txt  package.xml
hmi_bringup/config/: hmi.yaml
hmi_bringup/config/cob4-2/: arm_left_joint_configurations.yaml  arm_left_joint_configurations.yaml~  arm_right_joint_configurations.yaml  arm_right_joint_configurations.yaml~  command_gui_buttons.yaml  command_gui_buttons.yaml~
hmi_bringup/config/hannover/: map.pgm  navigation_goals.yaml
hmi_bringup/config/ipa-apartment/: navigation_goals.yaml
hmi_bringup/config/test_env/: command_gui_buttons.yaml  map.pgm  navigation_goals.yaml
hmi_bringup/launch/: dashboard.launch  dashboard.launch~  rviz.launch  start_demo.launch  start_demo_b1.launch  start_demo_t2.launch  upload_param.launch
hmi_manipulation/: CMakeLists.txt  package.xml
hmi_manipulation/src/: cob_grasping_hmi.py  roses_tf_broadcaster.py
hmi_scenario_states/: CMakeLists.txt  package.xml
hmi_scenario_states/scripts/: Cob42Introduction.py  Cob42Introduction_beta.py  ball_handling.py  charging_scene.py  hmi.py  intro.py  roses.py
hmi_table_localisation/: CMakeLists.txt  package.xml
hmi_table_localisation/cfg/: TableLocalisation.cfg
hmi_table_localisation/ros/include/hmi_table_localisation/: table_localisation.h
hmi_table_localisation/ros/launch/: table_localisation.launch
hmi_table_localisation/ros/src/: table_localisation.cpp  table_localisation_node.cpp
launch/: dashboard.launch  upload_param.launch
